--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -956,11 +956,11 @@ header {
 }
 .single-service-icon-box {
   width: 170px;
-  height: 170px;
+  height: 150px;
   float: left;
   text-align: center;
   background: #3e66db;
-  border-radius: 50%;
+
   position: relative;
   z-index: 1;
   transition: 0.5s ease-in-out;
@@ -980,7 +980,7 @@ header {
   border-radius: 50%;
   bottom: -14px;
   font-size: 28px;
-  color: #ff497c;
+  color: hsl(108, 100%, 64%);
   right: -10px;
 }
 .service-box-content {
