--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -582,15 +582,15 @@ header {
 ----------------------------------------*/
 
 .hero-bg-1 {
-  background: url(https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background: url(https://cdn.pixabay.com/photo/2020/02/03/00/12/fiber-4814456_640.jpg);
   background-color: #ddd;
 }
 .hero-bg-2 {
-  background: url(https://images.pexels.com/photos/5908766/pexels-photo-5908766.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load);
+  background: url(https://cdn.pixabay.com/photo/2023/03/13/07/50/network-7849205_640.jpg);
   background-color: #ddd;
 }
 .hero-bg-3 {
-  background: url(https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background: url(https://cdn.pixabay.com/photo/2018/04/28/16/40/network-3357642_640.jpg);
   background-color: #ddd;
 }
 
@@ -630,7 +630,7 @@ header {
 .hero-para:before {
   position: absolute;
   width: 5px;
-  height: 110px;
+  height: 70px;
   left: 0;
   top: 0;
   background: #f26c4f;
