--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -384,6 +384,16 @@
   .header-search {
     display: none;
   }
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
   .offcanvas-search-area {
     display: none;
   }
